--- a/wordpress/assets/css/post.css
+++ b/wordpress/assets/css/post.css
@@ -88,7 +88,7 @@ module
 .breadcrumb {
   border-left: none;
   border-right: none;
-  margin: 0 0 24px;
+  margin: 0 0 36px;
   padding: .5em .8em .4em;
 }
 
@@ -141,10 +141,11 @@ article
 -------------------------------------------------- */
 .article {
   background: #fff;
-  padding: 24px 5% 50px;
+  padding: 32px 5% 50px;
 }
 .article h1 {
   font-size: 40px;
+  font-weight: bold;
   line-height: 1.2;
   margin: 0 0 .5em;
   padding: .1em .5em .12em .3em;
@@ -157,7 +158,7 @@ article
   margin: 0 auto 50px;
 }
 .article .breadcrumb+ #toc_container+ h2 {
-  margin-top: 40px;
+  margin-top: 0;
 }
 .article h2 {
   color: #fff;
@@ -193,9 +194,17 @@ article
   font-size: 16px;
   font-weight: bold;
   line-height: 1.4;
-  margin: 0 0 14px;
+  margin: -0.4em 0 14px;
   padding: .4em 0 .4em 2.4em;
   position: relative;
+}
+.article dd caption,
+.article dd .wp-block-group p:first-of-type,
+.article dd .wp-block-image figcaption {
+  font-size: 15px;
+  padding: 0.4em 0 0.4em 1.8em;
+  font-weight: normal;
+  text-shadow: 0 0 0 #0e0e0e;
 }
 .article caption::before,
 .wp-block-group p:first-of-type::before,
@@ -208,6 +217,16 @@ article
   position: absolute;
   top: 50%;
   width: 1.6em;
+}
+.wp-block-group p:first-of-type+ dl {
+  margin-top: 0;
+}
+.article dd caption::before,
+.article dd .wp-block-group p:first-of-type::before,
+.article dd .wp-block-image figcaption::before {
+  height: 1.15em;
+  margin: -9px 0 0;
+  width: 1.15em;
 }
 .article ul,
 .article ol {
@@ -274,6 +293,7 @@ article
 .article table {
   border: 1px solid #9ca9af;
   margin: 50px 0 50px;
+  width: 100%;
 }
 .article caption {
   text-align: left;
@@ -294,7 +314,7 @@ article
   font-weight: normal;
   text-align: left;
   text-shadow: 0 0 0 #0e0e0e;
-  word-break: normal;
+  word-break: keep-all;
 }
 .article th[colspan],
 .article td[colspan] {
@@ -315,8 +335,8 @@ article
 .article dt {
   font-size: 16px;
   line-height: 1.4;
-  margin: 0 0 .6em;
-  padding: 0 0 0 2.2em;
+  margin: 0 0 .7em;
+  padding: 0 0 0 38px;
   position: relative;
   text-shadow: 0 0 0 #0e0e0e, 0 0 0 #0e0e0e;
 }
@@ -325,11 +345,11 @@ article
 
 /*ver 4.7 */
   font-family: 'FontAwesome';
-  font-size: 28px;
+  font-size: 2em;
   font-weight: bold;
   left: 0;
   line-height: 1.0;
-  margin: -.54em 0 0;
+  margin: -.55em 0 0;
   padding: 0 .3em 0 0;
   position: relative;
   position: absolute;
@@ -338,11 +358,14 @@ article
   top: 50%;
 }
 .article dd {
-  padding: 0 0 .8em 2.3em;
+  padding: 0 0 1em 40px;
   position: relative;
 }
 .article dd:not(:last-of-type) {
-  margin: 0 0 1.4em;
+  margin: 0 0 1.6em;
+}
+.article dd> :not(img):not(.wp-block-image):last-child {
+  margin-bottom: 0;
 }
 .article dd:after {
   border-bottom: 1px solid #9ca9b0;
@@ -353,14 +376,15 @@ article
   position: absolute;
   width: 110%;
 }
-.article dd ul {
-  margin: 0;
+.article dd p {
+  margin: 0 0 20px;
+  padding: 0;
 }
 .wp-block-image {
   display: flex;
   flex-wrap: wrap;
 }
-.wp-block-image img,
+/* .wp-block-image img, */
 .wp-block-image figcaption {
   flex: 0 1 100%;
 }
@@ -373,12 +397,13 @@ article
 .article img {
   border: 1px solid #b7bbbb;
 }
+.article dd table,
 .article dd .wp-block-image,
 .article p> img,
 .article li> img,
 .article dt> img,
 .article dd> img {
-  margin: 20px 0;
+  margin: 24px 0;
 }
 .article dd .wp-block-image img {
   margin: 0;
@@ -411,9 +436,6 @@ article
   .article h2 {
     font-size: 20px;
     margin: 50px 0 25px;
-  }
-  .article dd {
-    padding: 0 0 .8em 2.4em;
   }
   .article p img,
   .article li img,
@@ -452,8 +474,18 @@ article
   .article td {
     border-left: none;
   }
+  .article td.highlight {
+    background: none;
+  }
   .article dt {
     font-size: 15px;
+    padding: 0 0 0 36px;
+  }
+  .article dd {
+    padding: 0 0 1em 38px;
+  }
+  .article dd .wp-block-image figcaption {
+    font-size: 14px;
   }
 }
 @media screen and (max-width: 479px) {
@@ -467,13 +499,10 @@ article
     font-size: 18px;
   }
   .article dt {
-    margin: 0 0 .8em;
+    margin: 0 0 1em;
   }
   .article dd {
-    padding: 0 0 .5em;
-  }
-  .article dd:not(:last-of-type) {
-    margin: 0 0 2em;
+    padding: 0 0 .8em .4em;
   }
   .article p img,
   .article li img,
