--- a/wordpress/style.css
+++ b/wordpress/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name: Own Theme
-Theme URI: http://localhost/koiwapf_wp/
+Theme URI: http://localhost/koiwa555_wp/
 Description: PORTFOLIO BY HIROSHI KOIWA のテーマです
 Version: 1.0
 Author: Koiwa
-Author URI: http://localhost/koiwapf_wp/
+Author URI: http://localhost/koiwa555_wp/
 */
 /*
 Theme Name: テーマの名前 (必須)
